// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationTag /> renders with description 1`] = `
<div>
  <a
    className={undefined}
    href="#Pets"
    onClick={[Function]}
  >
    <span>
      Pets
    </span>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
    <div
      className=""
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Access to Pets</p>
",
        }
      }
    />
  </a>
  <div
    className=""
  />
</div>
`;

exports[`<NavigationTag /> renders with methods 1`] = `
<div>
  <a
    className={undefined}
    href="#pets"
    onClick={[Function]}
  >
    <span>
      pets
    </span>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </a>
  <div
    className="undefined"
  >
    <a
      className=""
      href="#pets"
      onClick={undefined}
    >
      <span
        className="get"
      >
        GET
      </span>
      <span
        className="short"
      >
        Get pets
      </span>
    </a>
    <a
      className=""
      href="#pets/:id"
      onClick={undefined}
    >
      <span
        className="get"
      >
        GET
      </span>
      <span
        className="short"
      >
        Get pets
      </span>
    </a>
  </div>
</div>
`;

exports[`<NavigationTag /> renders with methods having paths 1`] = `
<div>
  <a
    className={undefined}
    href="#pets"
    onClick={[Function]}
  >
    <span>
      pets
    </span>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </a>
  <div
    className=""
  >
    <a
      className="undefined"
      href="#/pets/get"
      onClick={undefined}
    >
      <span
        className="get"
      >
        GET
      </span>
      <span
        className={undefined}
      >
        /pets
      </span>
    </a>
    <a
      className="undefined"
      href="#/pets/:id/get"
      onClick={undefined}
    >
      <span
        className="get"
      >
        GET
      </span>
      <span
        className={undefined}
      >
        /pets/:id
      </span>
    </a>
  </div>
</div>
`;

exports[`<NavigationTag /> renders with methods having paths and summary 1`] = `
<div>
  <a
    className={undefined}
    href="#pets"
    onClick={[Function]}
  >
    <span>
      pets
    </span>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </a>
  <div
    className=""
  >
    <a
      className="undefined"
      href="#/pets/get"
      onClick={undefined}
    >
      <span
        className="get"
      >
        GET
      </span>
      <span
        className={undefined}
      >
        /pets
      </span>
      <br />
      <span
        className=""
      >
        Get pets
      </span>
    </a>
    <a
      className="undefined"
      href="#/pets/:id/get"
      onClick={undefined}
    >
      <span
        className="get"
      >
        GET
      </span>
      <span
        className={undefined}
      >
        /pets/:id
      </span>
      <br />
      <span
        className=""
      >
        Get pets
      </span>
    </a>
  </div>
</div>
`;

exports[`<NavigationTag /> renders with minimum props 1`] = `
<div>
  <a
    className={undefined}
    href="#pets"
    onClick={[Function]}
  >
    <span>
      pets
    </span>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </a>
  <div
    className=""
  />
</div>
`;
